--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/dist/css/main.css">
-    <link rel="icon" href="assets/img/logo128.png" type="image/png">
+    <link rel="icon" href="assets/img/logo.png" type="image/png">
     <script src="assets/js/main.js" defer></script>
     
     <title>Contatore</title>
 
     <meta property="og:title" content="Contatore Interattivo">
     <meta property="og:description" content="Aumenta, diminuisci o resetta il valore del contatore con un click!">
-    <meta property="og:image" content="https://example.com/assets/images/contatore-preview.png">
-    <meta property="og:url" content="https://example.com/contatore">
+    <meta property="og:image" content="https://manuelspoladore.github.io/progetto_Java_di_Manuel_Spoladore/assets/img/contatore_og">
+    <meta property="og:url" content="https://manuelspoladore.github.io/progetto_Java_di_Manuel_Spoladore/">
     <meta property="og:type" content="website">
 
   
