--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="background">
     <div class="container" role="main">
-        <h1>Contatore</h1>
+        <h1 id="counter-title">Contatore</h1>
     <div class="counter" aria-labelledby="counter-title" role="region">
         <p class="value" role="status" aria-live="polite">0</p>
     </div>
@@ -36,7 +36,6 @@
         </div>
         <button class="reset" aria-label="Resetta il contatore">Reset</button>
     </div>
-</div>
 </div>
  
 </body>
