--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title" content="Contatore Interattivo">
     <meta property="og:description" content="Aumenta, diminuisci o resetta il valore del contatore con un click!">
-    <meta property="og:image" content="https://manuelspoladore.github.io/progetto_Java_di_Manuel_Spoladore/assets/img/contatore_og">
+    <meta property="og:image" content="https://manuelspoladore.github.io/progetto_Java_di_Manuel_Spoladore/assets/img/contatore_og.png">
     <meta property="og:url" content="https://manuelspoladore.github.io/progetto_Java_di_Manuel_Spoladore/">
     <meta property="og:type" content="website">
 
