--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contatore,umenta, diminuisci o resetta il valore del contatore con un click! ">
+    <meta name="keywords" content="Contatore, Counter">
+    <meta name="author" content="Manuel Spoladore">
+    <meta name="robots" content="index">
     <link rel="stylesheet" href="assets/dist/css/main.css">
     <link rel="icon" href="assets/img/logo.png" type="image/png">
     <script src="assets/js/main.js" defer></script>
